--- a/.github/workflows/cd_release.yml
+++ b/.github/workflows/cd_release.yml
@@ -30,7 +30,14 @@ jobs:
       run: |
         python -m pip install -U pip
         pip install -U setuptools wheel
-        pip install -U invoke
+
+        while IFS="" read -r line || [ -n "${line}" ]; do
+          if [[ "${line}" =~ ^invoke.*$ ]]; then
+            invoke="${line}"
+          fi
+        done < requirements.txt
+
+        pip install ${invoke}
 
     - name: Update changelog
       uses: CharMixer/auto-changelog-action@v1
