--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,6 +4,8 @@ repos:
   hooks:
   - id: check-yaml
     name: Check YAML
+  - id: check-toml
+    name: Check TOML
   - id: destroyed-symlinks
   - id: end-of-file-fixer
   - id: requirements-txt-fixer
