--- a/.github/workflows/ci_automerge_dependabot.yml
+++ b/.github/workflows/ci_automerge_dependabot.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - ci/dependabot-updates
 
+env:
+  GIT_USER_NAME: OPTIMADE Developers
+  GIT_USER_EMAIL: "dev@optimade.org"
+
 jobs:
 
   update-dependabot-branch:
@@ -13,11 +17,56 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Setup git config
+      run: |
+        git config --global user.name "${GIT_USER_NAME}"
+        git config --global user.email "${GIT_USER_EMAIL}"
+
     - name: Checkout repository
       uses: actions/checkout@v2
       with:
         fetch-depth: 0
         ref: ${{ github.event.pull_request.head.ref }}
+
+    - name: Setup Python 3.9
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.9
+
+    - name: Install Python dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -U setuptools wheel
+
+        while IFS="" read -r line || [ -n "${line}" ]; do
+          if [[ "${line}" =~ ^invoke.*$ ]]; then
+            invoke="${line}"
+          fi
+        done < requirements_docs.txt
+
+        pip install ${invoke}
+
+    - name: Run task, commit and push changes
+      run: |
+        invoke check-dockerfile-python-version
+
+        git add pyproject.toml .github/workflows/ci_tests.yml
+        if [ -n "$(git status --porcelain pyproject.toml .github/workflows/ci_tests.yml)" ]; then
+          # Only commit if there's something to commit (git will return non-zero otherwise)
+          echo "Committing update to Python version usage in CI and config !"
+          git commit -m "Update pytest dependency config"
+          echo "PUSH_BACK_TO_BRANCH=true" >> $GITHUB_ENV
+        else
+          echo "No changes to Python version usage in CI and config."
+          echo "PUSH_BACK_TO_BRANCH=false" >> $GITHUB_ENV
+        fi
+
+    - name: Update Dependabot branch
+      if: env.PUSH_BACK_TO_BRANCH == 'true'
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.RELEASE_PAT_CASPER }}
+        branch: ${{ github.event.pull_request.head.ref }}
 
     - name: Activate auto-merge
       run: |
