--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -7,7 +7,61 @@ on:
     - master
     - 'push-action/**'
 
+env:
+  PYTHON_VERSION: 3.9
+
 jobs:
+
+  pre-commit:
+    runs-on: ubuntu-latest
+    name: Pre-commit
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Setup Python ${{ env.PYTHON_VERSION }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+
+      - name: Install Python dependencies
+        run: |
+          python -m pip install -U pip
+          pip install -U setuptools wheel
+
+          while IFS="" read -r line || [ -n "${line}" ]; do
+            if [[ "${line}" =~ ^pre-commit.*$ ]]; then
+              pre_commit="${line}"
+            fi
+          done < requirements.txt
+
+          pip install ${pre_commit}
+
+      - name: Run pre-commit
+        run: SKIP=pylint pre-commit run --all-files --show-diff-on-failure
+
+  pylint-safety:
+    runs-on: ubuntu-latest
+    name: PyLint & Safety
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Setup Python ${{ env.PYTHON_VERSION }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+
+      - name: Install Python dependencies
+        run: |
+          python -m pip install -U pip
+          pip install -U setuptools wheel
+          pip install -r requirements.txt
+          pip install safety
+
+      - name: Run pylint
+        run: pylint --rcfile=pyproject.toml *.py
+
+      - name: Run safety
+        run: pip freeze | safety check --stdin
 
   validator_regular:
     runs-on: ubuntu-latest
