Fix workflow and python-version task
MyPy only accepts python version up to a minor specification, i.e., x.y,
not x.y.z. Since Dependabot might update to a full versioned Python
Docker image the task needs to only put the first two version numbers in
the config file for MyPy.

The workflow referenced a requirements file that doesn't exist.

--- a/.github/workflows/ci_automerge_dependabot.yml
+++ b/.github/workflows/ci_automerge_dependabot.yml
@@ -42,7 +42,7 @@ jobs:
           if [[ "${line}" =~ ^invoke.*$ ]]; then
             invoke="${line}"
           fi
-        done < requirements_docs.txt
+        done < requirements.txt
 
         pip install ${invoke}
 
