--- a/.github/workflows/ci_dependabot.yml
+++ b/.github/workflows/ci_dependabot.yml
@@ -5,6 +5,7 @@ on:
     # At 6:30 UTC every Wednesday
     # Dependabot runs daily at between 4 and 5 UTC
     - cron: "30 6 * * 3"
+  pull_request:
 
 jobs:
 
@@ -23,6 +24,24 @@ jobs:
       uses: actions/checkout@v2
       with:
         ref: ${{ env.DEFAULT_REPO_BRANCH }}
+
+    - name: Set up Python 3.9
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.9
+
+    - name: Install `pre-commit`
+      run: |
+        python -m pip install -U pip
+        pip install -U setuptools wheel
+
+        while IFS="" read -r line || [ -n "${line}" ]; do
+          if [[ "${line}" =~ ^pre-commit.*$ ]]; then
+            pre_commit="${line}"
+          fi
+        done < requirements.txt
+
+        pip install ${pre_commit}
 
     - name: Set up git user info
       run: |
