--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v4.1.0
+  rev: v4.2.0
   hooks:
   - id: check-yaml
     name: Check YAML
@@ -17,18 +17,18 @@ repos:
   - id: check-shebang-scripts-are-executable
 
 - repo: https://github.com/ambv/black
-  rev: 21.12b0
+  rev: 22.3.0
   hooks:
   - id: black
 
 - repo: https://github.com/PyCQA/bandit
-  rev: '1.7.1'
+  rev: '1.7.4'
   hooks:
   - id: bandit
     args: [-r]
 
 - repo: https://github.com/pre-commit/mirrors-mypy
-  rev: v0.930
+  rev: v0.950
   hooks:
   - id: mypy
 
